test/conformance/chainsaw/imagevalidatingpolicies/context/imagedata/image-data/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-image-data
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: deployment-image-data
#   labels:
#     app: nginx
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: nginx
#   template:
#     metadata:
#       labels:
#         app: nginx
#     spec:
#       containers:
#       - name: nginx
#         image: nginx:latest
