test/conformance/chainsaw/imagevalidatingpolicies/context/imagedata/image-data/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: image-data
spec:
  steps:
  - name: create policy
    try:
    - create:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: create deployment
    try:
    - create:
        file: deployment.yaml
        timeout: 90s
        expect:
          - check:
              ($error): >-
                admission webhook "ivpol.validate.kyverno.svc-fail" denied the request: Policy  failed: expect variables.exist to be true, got: true
